@@ -1,3 +1,7 @@
+* Span.pm gets it's own package
+
+* added Span.pm method "iterator()"
+
 2005-07-10
 
 * added module Set::Infinite 
